rule.output
Terminaux inutilisés dans la grammaire

   tRETCHAR
   tPINT
   tFOR


La règle est inutile dans l'analyseur à cause de conflits

   15 $@5: %empty


État 7 conflits: 8 décalage/réduction, 1 réduction/réduction
État 18 conflits: 8 décalage/réduction, 1 réduction/réduction
État 25 conflits: 4 décalage/réduction
État 56 conflits: 1 réduction/réduction
État 61 conflits: 6 décalage/réduction
État 62 conflits: 6 décalage/réduction
État 63 conflits: 6 décalage/réduction
État 64 conflits: 6 décalage/réduction
État 65 conflits: 10 décalage/réduction
État 66 conflits: 10 décalage/réduction
État 67 conflits: 10 décalage/réduction
État 68 conflits: 10 décalage/réduction
État 69 conflits: 10 décalage/réduction
État 70 conflits: 10 décalage/réduction


Grammaire

    0 $accept: start $end

    1 start: tINT tMAIN tPARO tPARF Body

    2 Body: tACCO Instrs tACCF

    3 Instrs: Instr Instrs
    4       | %empty

    5 Instr: Defs
    6      | Affect
    7      | If
    8      | tPRINTF tPARO Expr tPARF tPV

    9 $@1: %empty

   10 Instr: tWHILE tPARO Expr tPARF $@1 Body

   11 $@2: %empty

   12 $@3: %empty

   13 $@4: %empty

   14 If: tIF tPARO Expr tPARF $@2 Body $@3 tELSE $@4 Body

   15 $@5: %empty

   16 If: tIF tPARO Expr tPARF $@5 Body

   17 Type: tINT
   18     | tCHAR

   19 Defs: Type tID Defs tPV
   20     | tCONST Type tID Defs tPV
   21     | tSEP tID Defs
   22     | %empty

   23 Affect: tID tEGAL Expr tPV

   24 Expr: tNB
   25     | tID
   26     | Expr tADD Expr
   27     | Expr tSUB Expr
   28     | Expr tMULT Expr
   29     | Expr tDIV Expr
   30     | Expr tEGEG Expr
   31     | Expr tDIFF Expr
   32     | Expr tINF Expr
   33     | Expr tINFEG Expr
   34     | Expr tSUP Expr
   35     | Expr tSUPEG Expr
   36     | tPARO Expr tPARF


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tRETCHAR (258)
tINT (259) 1 17
tMAIN (260) 1
tACCO (261) 2
tACCF (262) 2
tCONST (263) 20
tID (264) 19 20 21 23 25
tADD (265) 26
tSUB (266) 27
tMULT (267) 28
tDIV (268) 29
tEGAL (269) 23
tPARO (270) 1 8 10 14 16 36
tPARF (271) 1 8 10 14 16 36
tSEP (272) 21
tPV (273) 8 19 20 23
tNB (274) 24
tPRINTF (275) 8
tPINT (276)
tIF (277) 14 16
tELSE (278) 14
tWHILE (279) 10
tFOR (280)
tCHAR (281) 18
tEGEG (282) 30
tDIFF (283) 31
tINF (284) 32
tINFEG (285) 33
tSUP (286) 34
tSUPEG (287) 35


Non-terminaux, suivis des règles où ils apparaissent

$accept (33)
    à gauche: 0
start (34)
    à gauche: 1, à droite: 0
Body (35)
    à gauche: 2, à droite: 1 10 14 16
Instrs (36)
    à gauche: 3 4, à droite: 2 3
Instr (37)
    à gauche: 5 6 7 8 10, à droite: 3
$@1 (38)
    à gauche: 9, à droite: 10
If (39)
    à gauche: 14 16, à droite: 7
$@2 (40)
    à gauche: 11, à droite: 14
$@3 (41)
    à gauche: 12, à droite: 14
$@4 (42)
    à gauche: 13, à droite: 14
$@5 (43)
    à gauche: 15, à droite: 16
Type (44)
    à gauche: 17 18, à droite: 19 20
Defs (45)
    à gauche: 19 20 21 22, à droite: 5 19 20 21
Affect (46)
    à gauche: 23, à droite: 6
Expr (47)
    à gauche: 24 25 26 27 28 29 30 31 32 33 34 35 36, à droite: 8
    10 14 16 23 26 27 28 29 30 31 32 33 34 35 36


État 0

    0 $accept: . start $end

    tINT  décalage et aller à l'état 1

    start  aller à l'état 2


État 1

    1 start: tINT . tMAIN tPARO tPARF Body

    tMAIN  décalage et aller à l'état 3


État 2

    0 $accept: start . $end

    $end  décalage et aller à l'état 4


État 3

    1 start: tINT tMAIN . tPARO tPARF Body

    tPARO  décalage et aller à l'état 5


État 4

    0 $accept: start $end .

    $défaut  accepter


État 5

    1 start: tINT tMAIN tPARO . tPARF Body

    tPARF  décalage et aller à l'état 6


État 6

    1 start: tINT tMAIN tPARO tPARF . Body

    tACCO  décalage et aller à l'état 7

    Body  aller à l'état 8


État 7

    2 Body: tACCO . Instrs tACCF

    tINT     décalage et aller à l'état 9
    tCONST   décalage et aller à l'état 10
    tID      décalage et aller à l'état 11
    tSEP     décalage et aller à l'état 12
    tPRINTF  décalage et aller à l'état 13
    tIF      décalage et aller à l'état 14
    tWHILE   décalage et aller à l'état 15
    tCHAR    décalage et aller à l'état 16

    tINT      [réduction par utilisation de la règle 22 (Defs)]
    tACCF     réduction par utilisation de la règle 4 (Instrs)
    tACCF     [réduction par utilisation de la règle 22 (Defs)]
    tCONST    [réduction par utilisation de la règle 22 (Defs)]
    tID       [réduction par utilisation de la règle 22 (Defs)]
    tSEP      [réduction par utilisation de la règle 22 (Defs)]
    tPRINTF   [réduction par utilisation de la règle 22 (Defs)]
    tIF       [réduction par utilisation de la règle 22 (Defs)]
    tWHILE    [réduction par utilisation de la règle 22 (Defs)]
    tCHAR     [réduction par utilisation de la règle 22 (Defs)]
    $défaut  réduction par utilisation de la règle 4 (Instrs)

    Instrs  aller à l'état 17
    Instr   aller à l'état 18
    If      aller à l'état 19
    Type    aller à l'état 20
    Defs    aller à l'état 21
    Affect  aller à l'état 22


État 8

    1 start: tINT tMAIN tPARO tPARF Body .

    $défaut  réduction par utilisation de la règle 1 (start)


État 9

   17 Type: tINT .

    $défaut  réduction par utilisation de la règle 17 (Type)


État 10

   20 Defs: tCONST . Type tID Defs tPV

    tINT   décalage et aller à l'état 9
    tCHAR  décalage et aller à l'état 16

    Type  aller à l'état 23


État 11

   23 Affect: tID . tEGAL Expr tPV

    tEGAL  décalage et aller à l'état 24


État 12

   21 Defs: tSEP . tID Defs

    tID  décalage et aller à l'état 25


État 13

    8 Instr: tPRINTF . tPARO Expr tPARF tPV

    tPARO  décalage et aller à l'état 26


État 14

   14 If: tIF . tPARO Expr tPARF $@2 Body $@3 tELSE $@4 Body
   16   | tIF . tPARO Expr tPARF $@5 Body

    tPARO  décalage et aller à l'état 27


État 15

   10 Instr: tWHILE . tPARO Expr tPARF $@1 Body

    tPARO  décalage et aller à l'état 28


État 16

   18 Type: tCHAR .

    $défaut  réduction par utilisation de la règle 18 (Type)


État 17

    2 Body: tACCO Instrs . tACCF

    tACCF  décalage et aller à l'état 29


État 18

    3 Instrs: Instr . Instrs

    tINT     décalage et aller à l'état 9
    tCONST   décalage et aller à l'état 10
    tID      décalage et aller à l'état 11
    tSEP     décalage et aller à l'état 12
    tPRINTF  décalage et aller à l'état 13
    tIF      décalage et aller à l'état 14
    tWHILE   décalage et aller à l'état 15
    tCHAR    décalage et aller à l'état 16

    tINT      [réduction par utilisation de la règle 22 (Defs)]
    tACCF     réduction par utilisation de la règle 4 (Instrs)
    tACCF     [réduction par utilisation de la règle 22 (Defs)]
    tCONST    [réduction par utilisation de la règle 22 (Defs)]
    tID       [réduction par utilisation de la règle 22 (Defs)]
    tSEP      [réduction par utilisation de la règle 22 (Defs)]
    tPRINTF   [réduction par utilisation de la règle 22 (Defs)]
    tIF       [réduction par utilisation de la règle 22 (Defs)]
    tWHILE    [réduction par utilisation de la règle 22 (Defs)]
    tCHAR     [réduction par utilisation de la règle 22 (Defs)]
    $défaut  réduction par utilisation de la règle 4 (Instrs)

    Instrs  aller à l'état 30
    Instr   aller à l'état 18
    If      aller à l'état 19
    Type    aller à l'état 20
    Defs    aller à l'état 21
    Affect  aller à l'état 22


État 19

    7 Instr: If .

    $défaut  réduction par utilisation de la règle 7 (Instr)


État 20

   19 Defs: Type . tID Defs tPV

    tID  décalage et aller à l'état 31


État 21

    5 Instr: Defs .

    $défaut  réduction par utilisation de la règle 5 (Instr)


État 22

    6 Instr: Affect .

    $défaut  réduction par utilisation de la règle 6 (Instr)


État 23

   20 Defs: tCONST Type . tID Defs tPV

    tID  décalage et aller à l'état 32


État 24

   23 Affect: tID tEGAL . Expr tPV

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 36


État 25

   21 Defs: tSEP tID . Defs

    tINT    décalage et aller à l'état 9
    tCONST  décalage et aller à l'état 10
    tSEP    décalage et aller à l'état 12
    tCHAR   décalage et aller à l'état 16

    tINT      [réduction par utilisation de la règle 22 (Defs)]
    tCONST    [réduction par utilisation de la règle 22 (Defs)]
    tSEP      [réduction par utilisation de la règle 22 (Defs)]
    tCHAR     [réduction par utilisation de la règle 22 (Defs)]
    $défaut  réduction par utilisation de la règle 22 (Defs)

    Type  aller à l'état 20
    Defs  aller à l'état 37


État 26

    8 Instr: tPRINTF tPARO . Expr tPARF tPV

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 38


État 27

   14 If: tIF tPARO . Expr tPARF $@2 Body $@3 tELSE $@4 Body
   16   | tIF tPARO . Expr tPARF $@5 Body

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 39


État 28

   10 Instr: tWHILE tPARO . Expr tPARF $@1 Body

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 40


État 29

    2 Body: tACCO Instrs tACCF .

    $défaut  réduction par utilisation de la règle 2 (Body)


État 30

    3 Instrs: Instr Instrs .

    $défaut  réduction par utilisation de la règle 3 (Instrs)


État 31

   19 Defs: Type tID . Defs tPV

    tINT    décalage et aller à l'état 9
    tCONST  décalage et aller à l'état 10
    tSEP    décalage et aller à l'état 12
    tCHAR   décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 22 (Defs)

    Type  aller à l'état 20
    Defs  aller à l'état 41


État 32

   20 Defs: tCONST Type tID . Defs tPV

    tINT    décalage et aller à l'état 9
    tCONST  décalage et aller à l'état 10
    tSEP    décalage et aller à l'état 12
    tCHAR   décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 22 (Defs)

    Type  aller à l'état 20
    Defs  aller à l'état 42


État 33

   25 Expr: tID .

    $défaut  réduction par utilisation de la règle 25 (Expr)


État 34

   36 Expr: tPARO . Expr tPARF

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 43


État 35

   24 Expr: tNB .

    $défaut  réduction par utilisation de la règle 24 (Expr)


État 36

   23 Affect: tID tEGAL Expr . tPV
   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tADD    décalage et aller à l'état 44
    tSUB    décalage et aller à l'état 45
    tMULT   décalage et aller à l'état 46
    tDIV    décalage et aller à l'état 47
    tPV     décalage et aller à l'état 48
    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54


État 37

   21 Defs: tSEP tID Defs .

    $défaut  réduction par utilisation de la règle 21 (Defs)


État 38

    8 Instr: tPRINTF tPARO Expr . tPARF tPV
   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tADD    décalage et aller à l'état 44
    tSUB    décalage et aller à l'état 45
    tMULT   décalage et aller à l'état 46
    tDIV    décalage et aller à l'état 47
    tPARF   décalage et aller à l'état 55
    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54


État 39

   14 If: tIF tPARO Expr . tPARF $@2 Body $@3 tELSE $@4 Body
   16   | tIF tPARO Expr . tPARF $@5 Body
   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tADD    décalage et aller à l'état 44
    tSUB    décalage et aller à l'état 45
    tMULT   décalage et aller à l'état 46
    tDIV    décalage et aller à l'état 47
    tPARF   décalage et aller à l'état 56
    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54


État 40

   10 Instr: tWHILE tPARO Expr . tPARF $@1 Body
   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tADD    décalage et aller à l'état 44
    tSUB    décalage et aller à l'état 45
    tMULT   décalage et aller à l'état 46
    tDIV    décalage et aller à l'état 47
    tPARF   décalage et aller à l'état 57
    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54


État 41

   19 Defs: Type tID Defs . tPV

    tPV  décalage et aller à l'état 58


État 42

   20 Defs: tCONST Type tID Defs . tPV

    tPV  décalage et aller à l'état 59


État 43

   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr
   36     | tPARO Expr . tPARF

    tADD    décalage et aller à l'état 44
    tSUB    décalage et aller à l'état 45
    tMULT   décalage et aller à l'état 46
    tDIV    décalage et aller à l'état 47
    tPARF   décalage et aller à l'état 60
    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54


État 44

   26 Expr: Expr tADD . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 61


État 45

   27 Expr: Expr tSUB . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 62


État 46

   28 Expr: Expr tMULT . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 63


État 47

   29 Expr: Expr tDIV . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 64


État 48

   23 Affect: tID tEGAL Expr tPV .

    $défaut  réduction par utilisation de la règle 23 (Affect)


État 49

   30 Expr: Expr tEGEG . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 65


État 50

   31 Expr: Expr tDIFF . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 66


État 51

   32 Expr: Expr tINF . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 67


État 52

   33 Expr: Expr tINFEG . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 68


État 53

   34 Expr: Expr tSUP . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 69


État 54

   35 Expr: Expr tSUPEG . Expr

    tID    décalage et aller à l'état 33
    tPARO  décalage et aller à l'état 34
    tNB    décalage et aller à l'état 35

    Expr  aller à l'état 70


État 55

    8 Instr: tPRINTF tPARO Expr tPARF . tPV

    tPV  décalage et aller à l'état 71


État 56

   14 If: tIF tPARO Expr tPARF . $@2 Body $@3 tELSE $@4 Body
   16   | tIF tPARO Expr tPARF . $@5 Body

    tACCO     réduction par utilisation de la règle 11 ($@2)
    tACCO     [réduction par utilisation de la règle 15 ($@5)]
    $défaut  réduction par utilisation de la règle 11 ($@2)

    $@2  aller à l'état 72
    $@5  aller à l'état 73


État 57

   10 Instr: tWHILE tPARO Expr tPARF . $@1 Body

    $défaut  réduction par utilisation de la règle 9 ($@1)

    $@1  aller à l'état 74


État 58

   19 Defs: Type tID Defs tPV .

    $défaut  réduction par utilisation de la règle 19 (Defs)


État 59

   20 Defs: tCONST Type tID Defs tPV .

    $défaut  réduction par utilisation de la règle 20 (Defs)


État 60

   36 Expr: tPARO Expr tPARF .

    $défaut  réduction par utilisation de la règle 36 (Expr)


État 61

   26 Expr: Expr . tADD Expr
   26     | Expr tADD Expr .
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tMULT   décalage et aller à l'état 46
    tDIV    décalage et aller à l'état 47
    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54

    tEGEG     [réduction par utilisation de la règle 26 (Expr)]
    tDIFF     [réduction par utilisation de la règle 26 (Expr)]
    tINF      [réduction par utilisation de la règle 26 (Expr)]
    tINFEG    [réduction par utilisation de la règle 26 (Expr)]
    tSUP      [réduction par utilisation de la règle 26 (Expr)]
    tSUPEG    [réduction par utilisation de la règle 26 (Expr)]
    $défaut  réduction par utilisation de la règle 26 (Expr)


État 62

   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   27     | Expr tSUB Expr .
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tMULT   décalage et aller à l'état 46
    tDIV    décalage et aller à l'état 47
    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54

    tEGEG     [réduction par utilisation de la règle 27 (Expr)]
    tDIFF     [réduction par utilisation de la règle 27 (Expr)]
    tINF      [réduction par utilisation de la règle 27 (Expr)]
    tINFEG    [réduction par utilisation de la règle 27 (Expr)]
    tSUP      [réduction par utilisation de la règle 27 (Expr)]
    tSUPEG    [réduction par utilisation de la règle 27 (Expr)]
    $défaut  réduction par utilisation de la règle 27 (Expr)


État 63

   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   28     | Expr tMULT Expr .
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54

    tEGEG     [réduction par utilisation de la règle 28 (Expr)]
    tDIFF     [réduction par utilisation de la règle 28 (Expr)]
    tINF      [réduction par utilisation de la règle 28 (Expr)]
    tINFEG    [réduction par utilisation de la règle 28 (Expr)]
    tSUP      [réduction par utilisation de la règle 28 (Expr)]
    tSUPEG    [réduction par utilisation de la règle 28 (Expr)]
    $défaut  réduction par utilisation de la règle 28 (Expr)


État 64

   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   29     | Expr tDIV Expr .
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54

    tEGEG     [réduction par utilisation de la règle 29 (Expr)]
    tDIFF     [réduction par utilisation de la règle 29 (Expr)]
    tINF      [réduction par utilisation de la règle 29 (Expr)]
    tINFEG    [réduction par utilisation de la règle 29 (Expr)]
    tSUP      [réduction par utilisation de la règle 29 (Expr)]
    tSUPEG    [réduction par utilisation de la règle 29 (Expr)]
    $défaut  réduction par utilisation de la règle 29 (Expr)


État 65

   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   30     | Expr tEGEG Expr .
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tADD    décalage et aller à l'état 44
    tSUB    décalage et aller à l'état 45
    tMULT   décalage et aller à l'état 46
    tDIV    décalage et aller à l'état 47
    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54

    tADD      [réduction par utilisation de la règle 30 (Expr)]
    tSUB      [réduction par utilisation de la règle 30 (Expr)]
    tMULT     [réduction par utilisation de la règle 30 (Expr)]
    tDIV      [réduction par utilisation de la règle 30 (Expr)]
    tEGEG     [réduction par utilisation de la règle 30 (Expr)]
    tDIFF     [réduction par utilisation de la règle 30 (Expr)]
    tINF      [réduction par utilisation de la règle 30 (Expr)]
    tINFEG    [réduction par utilisation de la règle 30 (Expr)]
    tSUP      [réduction par utilisation de la règle 30 (Expr)]
    tSUPEG    [réduction par utilisation de la règle 30 (Expr)]
    $défaut  réduction par utilisation de la règle 30 (Expr)


État 66

   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   31     | Expr tDIFF Expr .
   32     | Expr . tINF Expr
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr

    tADD    décalage et aller à l'état 44
    tSUB    décalage et aller à l'état 45
    tMULT   décalage et aller à l'état 46
    tDIV    décalage et aller à l'état 47
    tEGEG   décalage et aller à l'état 49
    tDIFF   décalage et aller à l'état 50
    tINF    décalage et aller à l'état 51
    tINFEG  décalage et aller à l'état 52
    tSUP    décalage et aller à l'état 53
    tSUPEG  décalage et aller à l'état 54

    tADD      [réduction par utilisation de la règle 31 (Expr)]
    tSUB      [réduction par utilisation de la règle 31 (Expr)]
    tMULT     [réduction par utilisation de la règle 31 (Expr)]
    tDIV      [réduction par utilisation de la règle 31 (Expr)]
    tEGEG     [réduction par utilisation de la règle 31 (Expr)]
    tDIFF     [réduction par utilisation de la règle 31 (Expr)]
    tINF      [réduction par utilisation de la règle 31 (Expr)]
    tINFEG    [réduction par utilisation de la règle 31 (Expr)]
    tSUP      [réduction par utilisation de la règle 31 (Expr)]
    tSUPEG    [réduction par utilisation de la règle 31 (Expr)]
    $défaut  réduction par utilisation de la règle 31 (Expr)


État 67

   26 Expr: Expr . tADD Expr
   27     | Expr . tSUB Expr
   28     | Expr . tMULT Expr
   29     | Expr . tDIV Expr
   30     | Expr . tEGEG Expr
   31     | Expr . tDIFF Expr
   32     | Expr . tINF Expr
   32     | Expr tINF Expr .
   33     | Expr . tINFEG Expr
   34     | Expr . tSUP Expr
   35     | Expr . tSUPEG Expr
